--- a/index.html
+++ b/index.html
@@ -11,51 +11,58 @@
             color: #333;
             margin: 0;
             padding: 20px;
+            text-align: center;
+        }
+        .header {
+            background-color: white;
+            padding: 10px;
+            border-radius: 10px;
+            display: inline-block;
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
         .container {
             max-width: 800px;
             margin: auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
         }
         .faq {
-            margin-top: 20px;
+            text-align: left;
         }
         .question {
+            background-color: #FF8C00; /* Sytější oranžová */
+            color: white;
+            padding: 15px;
+            border-radius: 5px;
             font-weight: bold;
             cursor: pointer;
             margin-top: 10px;
         }
         .answer {
             display: none;
+            padding: 15px;
+            background: white;
+            border-radius: 5px;
             margin-top: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>FAQ pro makléře</h1>
+        <div class="header">FAQ pro makléře</div>
         <div class="faq">
-            <div class="question">1. Jaké jsou hlavní výhody této služby?</div>
+            <div class="question">Co je tato služba?</div>
+            <div class="answer">Služba je určena k podpoře makléřů v oblasti pojištění a finančního poradenství.</div>
+            
+            <div class="question">Jaké jsou hlavní výhody této služby?</div>
             <div class="answer">Hlavní výhody zahrnují flexibilitu, úsporu času a profesionální podporu.</div>
             
-            <div class="question">2. Jak mohu kontaktovat podporu?</div>
+            <div class="question">Jak mohu kontaktovat podporu?</div>
             <div class="answer">Podporu můžete kontaktovat emailem nebo telefonicky dle uvedených kontaktů.</div>
         </div>
     </div>
 
     <script>
         document.querySelectorAll('.question').forEach(item => {
-            item.addEventListener('click', () => {
-                let answer = item.nextElementSibling;
-                answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
-            });
-        });
-    </script>
-</body>
-</html>
+            item.addEvent
