--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="faq-header-container">
-        <img src="_ASTORIE_LOGA_RGB_SLOGAN%201.jpg" alt="Logo" class="logo">
+        <img src="_ASTORIE_LOGA_RGB_SLOGAN 1.jpg" alt="Logo" class="logo">
         <div class="faq-header">FAQ pro makléře</div>
     </div>
 
