--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="faq-header-container">
-        <<img src="https://raw.githubusercontent.com/nekudova/faq-makler/main/_ASTORIE_LOGA_RGB_SLOGAN%201.jpg" 
+        <img src="https://raw.githubusercontent.com/nekudova/faq-makler/main/_ASTORIE_LOGA_RGB_SLOGAN%201.jpg" 
      alt="Logo společnosti" class="logo">
         <div class="faq-header">FAQ pro makléře</div>
     </div>
