--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="faq-header-container">
-        <img src="https://raw.githubusercontent.com/nekudova/faq-makler/main/_ASTORIE_LOGA_RGB_SLOGAN%201.jpg" 
-     alt="Logo společnosti" class="logo">
-        <div class="faq-header">FAQ pro makléře</div>
-    </div>
+    <img src="https://raw.githubusercontent.com/nekudova/faq-makler/main/_ASTORIE_LOGA_RGB_SLOGAN%201.jpg" 
+         alt="Logo společnosti" class="logo">
+    <h1 class="faq-header">FAQ pro makléře</h1>
+</div>
 
     <div id="faq-container"></div>
 
